# perplex

./: .gitignore  README.md  perplex.cabal
src/: Main.hs  Perplex.hs
src/Perplex/: Git.hs  Widgets.hs
