cabal-version:       >=1.10

name:                perplex
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              krissemicolon
maintainer:          krissemicolon@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable perplex
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  ghc-options: -threaded

  build-depends:       base >=4.13 && <4.14,
                       brick,
                       gitlib
                       
  hs-source-dirs:      src
  default-language:    Haskell2010
