cabal-version:       >=1.10
name:                perplex
version:             0.1.0.0
synopsis:            Git Client in a TUI format
description:         Git Client in a TUI format
license:             GPL-3
license-file:        LICENSE
author:              krissemicolon
maintainer:          kris@krishuber.xyz
build-type:          Simple

executable perplex
  main-is:             Perplex.hs
  ghc-options:         -threaded
  build-depends:       base
                     , brick
                     , gitlib
                     , directory
                     , cursor
                     , vty
                     , time
                     , text
                     , tagged
                     , gitlib
                     , gitlib-libgit2
                       
  hs-source-dirs:      src
  default-language:    Haskell2010
